# iceberg-chart-webscrapping-concept

./: .env  .flake8  .gitignore  Dockerfile  main.py  pyproject.toml  readme.md
src/core/domain/: __init__.py  settings.py
src/core/domain/dto/: __init__.py  category_entry.py
src/core/use_case/: __init__.py  get_all_categories.py  get_all_categories_links.py  get_all_topics.py
